--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
           <div class="footer-brand">
             <div class="footer-logo-row">
-            <img src="/images/logo1.png" alt="Fleck Earthmoving" class="footer-logo">
+            <img src="logo.png" alt="Fleck Earthmoving" class="footer-logo">
             <a href="#"><span class="footer-brand-name">Fleck Earthmoving</span></a>
             </div>
             <p>
