--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <div class="cta-content">
           <h2>Ready to Start Your Project?</h2>
           <p>
-            From civil works to large-scale earthmoving, Fleck Earthmoving delivers reliable result across NSW.
+            From civil works to large-scale earthmoving, Fleck Eathmoving & Plant Hire delivers reliable result across NSW & SYDNEY.
           </p>
 
           <div class="cta-buttons">
